2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2rw.cc(jtag2::jtagWrite): omit chip erase when
	operating on debugWIRE
	* src/jtag3rw.cc(jtag3::jtagWrite): (Dito.)

2016-03-03 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3.h: Mark jtag3::doSimpleJtagCommand() as throwing
	exceptions
	* src/jtag3rw.cc: (Dito.)

2016-03-02 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc (hid_thread): Support packet fragmentation and
	assembly (for mEDBG).

2016-03-01 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Determine max. transfer size from DAP_Info
	response

2016-02-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date after merging jwunsch_edbg
	branch back into trunk

2016-02-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/main.cc: Improve explanation of -4 option, default EDBG to
	USB, and set debug output to line buffered mode
	* src/jtag2usb.cc: Fix packet size when passing event upstream

2016-02-26 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Implement libhidapi support for EDBG-based ICEs

2016-02-22 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add hooks for libhidapi

2015-06-24 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Uwe Frank <frank@drello.de>
	* src/devdescr.cc (ATxmega192A3): New entry
	* doc/avarice.1: Document the new entry.

2015-05-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tobias Frost <tobi@debian.org>:
	Bug #34 Fix compilation with GCC 5
	* src/pragma.h: Fix pragmas for GCC > 4

2014-12-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date.

2014-10-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/remote.cc (monitor): implement a "mon reset" command.

2014-09-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/edbg.lua: New file.

2013-06-29 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/jtag3bp.cc (jtag3::updateBreakpoints): don't accidentally
	truncate code breakpoints to 64 KiB
